<resources>
    <string name="app_name">donut</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_directions">Long click the screen to create a new marker at the desired location.</string>

    <!-- Strings related to Settings below -->
    <string name="shake_option">Shake option</string>
    <string name="shake_option_summary">An option to find the nearest marker by shaking the phone.</string>
    <string name="radius_option">Radius option</string>
    <string name="radius_option_summary">An option to filter requests by radius in kilometers.</string>
    <string name="time_option">Time option</string>
    <string name="time_option_summary">An option to filter requests by time.</string>
    <string name="radius_toggle">Either filter by radius or explore all markers.</string>
</resources>
